Finished cleaning up clusterprofiler script

--- a/scripts/Readme.Rmd
+++ b/scripts/Readme.Rmd
@@ -13,8 +13,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Transcriptomic responses of Galápagos finches to avian pox virus infection
 
 ### Scripts: 
-1) 
-2) **bracken.R** Script to analyze results of kraken/bracken metatranscriptomics. 
+1) **pox_genex.R** Script to take output of alignment and calcuate differential 
+expression and count estimates for each gene. (uses DeSEQ2). Makes PCA and volcano 
+plots
+2) **clusterProfiler.R** Script to perform gene set enrichment analysis using 
+the counts estimated in pox_genex.R
+3) **bracken.R** Script to analyze results of kraken/bracken metatranscriptomics. 
 Used to test whether pox reads were found within transcriptomic dataset and whether
 there were differences in number of pox reads between species/groups.
-3) **slide_data.R** Script to analyze leukocyte counts from slide microscopy
+4) **slide_data.R** Script to analyze leukocyte counts from slide microscopy
